fix:Reduce margin-top value of main to eliminate gap between header and hero-image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ main {
     /* Grow main element to occupy surplus space, thereby keeping the footer pushed down */
     flex: 1 0 auto;
     /* Push main element down to prevent partial occlusion by fixed header" */
-    margin-top: 47px;
+    margin-top: 41px;
 }
 
 /* Hero section */
